# nephos

./: Cargo.toml  LICENSE  README.md
src/: app.rs  apps.rs  buffer.rs  image.rs  lib.rs  main.rs  map.rs  render.rs  render.wgsl  sim.rs  sim.wgsl  util.rs
src/apps/: basic.rs  fit.rs
src/image/: common.wgsl  simulate.wgsl
src/image/score/: compare.wgsl  reduce.wgsl
